--- a/Student-management/Source/ViewControllers/AddStudent/AddStudentViewController.xib
+++ b/Student-management/Source/ViewControllers/AddStudent/AddStudentViewController.xib
@@ -19,6 +19,7 @@
                 <outlet property="maleButtonOutlet" destination="3zW-us-4Ah" id="kyD-Vg-7tf"/>
                 <outlet property="nameTextField" destination="RpI-1a-rZp" id="6Jv-Bf-chU"/>
                 <outlet property="numberPhoneTextField" destination="OZ4-Hc-XoX" id="zd6-nX-HV3"/>
+                <outlet property="stackView" destination="7WC-hE-bmS" id="c7u-Vp-x9r"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -48,11 +49,11 @@
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
-                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="*Email sinh viên" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="k6E-P1-wJv">
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="*Lớp" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Duy-xG-zsN">
                             <rect key="frame" x="0.0" y="209" width="374" height="35"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="35" id="Oxu-tp-h7g"/>
+                                <constraint firstAttribute="height" constant="35" id="wUC-Gs-lbW"/>
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits"/>
@@ -117,11 +118,11 @@
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
-                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="*Lớp" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Duy-xG-zsN">
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="*Email sinh viên" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="k6E-P1-wJv">
                             <rect key="frame" x="0.0" y="387" width="374" height="35"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="35" id="wUC-Gs-lbW"/>
+                                <constraint firstAttribute="height" constant="35" id="Oxu-tp-h7g"/>
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits"/>
@@ -164,7 +165,7 @@
                 </button>
             </subviews>
             <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
-            <color key="backgroundColor" red="0.067546926440000002" green="0.44095295670000001" blue="0.73271065950000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" red="0.077801071109999995" green="0.43235334749999998" blue="0.7449186444" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="sOa-Ax-78b" firstAttribute="centerX" secondItem="Efl-zD-cxN" secondAttribute="centerX" id="5mZ-Va-JK0"/>
                 <constraint firstItem="ZeQ-ag-BG3" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="40" id="6YP-Qe-O9s"/>
